src/main/metadata-excluded/objects/Project_Overview__c.object
<CustomObject>
    <description>PMO: The Overview of a whole project</description>
    <fields>
        <fullName>Burn_Report_Last_Update__c</fullName>
        <description>Date burn report was last updated</description>
        <inlineHelpText>Date burn report was last updated</inlineHelpText>
        <label>Burn Report - Last Update</label>
        <summarizedField>Resource_Report__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>Resource_Report__c.Project_Overview__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <formula>IF( Total_Budget_Hours__c &lt;&gt; 0, Total_Actual_Hours__c  /  Total_Budget_Hours__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>Name of customer</description>
        <label>Customer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diff_w_Budget__c</fullName>
        <description>Total budget hrs - Total forecast hours</description>
        <formula>Total_Budget_Hours__c - Total_Forecast_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Negative value indicates the project is forecasted to be over budget</inlineHelpText>
        <label>Est. Diff w/ Budget</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Hrs_to_Complete__c</fullName>
        <description>Estimated hours left in the project</description>
        <inlineHelpText>Estimated hours left in the project</inlineHelpText>
        <label>Est. Hrs to Complete</label>
        <summarizedField>Resource_Report__c.Est_Hrs_to_Complete__c</summarizedField>
        <summaryForeignKey>Resource_Report__c.Project_Overview__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Forecast_Budget_Diff__c</fullName>
        <description>Negative amt indicates OVER budget</description>
        <inlineHelpText>Negative amt indicates OVER budget</inlineHelpText>
        <label>Forecast Budget Diff</label>
        <summarizedField>Resource_Report__c.Diff_w_Budget_Dollars__c</summarizedField>
        <summaryForeignKey>Resource_Report__c.Project_Overview__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Forecast_Final_Dollars__c</fullName>
        <formula>Total_Assigned_Budget_c__c  + Management_Fee__c - Forecast_Budget_Diff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Final $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Go_Live__c</fullName>
        <description>Expected Go live date</description>
        <inlineHelpText>Expected Go live date</inlineHelpText>
        <label>Go Live</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Management_Fee__c</fullName>
        <description>For projects with mgt fee included - input TOTAL from the SOW estimate</description>
        <inlineHelpText>Estimated total fixed fee; used in forecast final $</inlineHelpText>
        <label>Management Fee</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <description>Oppty ID from the 62 Org</description>
        <inlineHelpText>Oppty ID from the 62 Org</inlineHelpText>
        <label>Opportunity Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <description>Project reference identifier</description>
        <label>Project Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Stage__c</fullName>
        <label>Project Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Plan</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Analyze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design - High Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design - Detailed Field Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test - Unit Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test - Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deploy to Prod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Hours__c</fullName>
        <label>Total Actual Hours</label>
        <summarizedField>Resource_Report__c.Actual_Hours_to_Date__c</summarizedField>
        <summaryForeignKey>Resource_Report__c.Project_Overview__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Approved_Budget__c</fullName>
        <description>Includes all PO&apos;s, CO&apos;s and Management Fees</description>
        <formula>Total_Assigned_Budget_c__c  +  Management_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Includes all PO&apos;s, CO&apos;s and Management Fees</inlineHelpText>
        <label>Total Approved Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Assigned_Budget_c__c</fullName>
        <description>calculated from the Burn Report line items</description>
        <inlineHelpText>Total of approved budget $</inlineHelpText>
        <label>Total Assigned Budget - hrs</label>
        <summarizedField>Resource_Report__c.Approved_Budget__c</summarizedField>
        <summaryForeignKey>Resource_Report__c.Project_Overview__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Budget_Hours__c</fullName>
        <label>Total Budget Hours</label>
        <summarizedField>Resource_Report__c.Budget_Hrs__c</summarizedField>
        <summaryForeignKey>Resource_Report__c.Project_Overview__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Forecast_Hours__c</fullName>
        <label>Total Forecast Hours</label>
        <summarizedField>Resource_Report__c.Forecast_Final_Hours__c</summarizedField>
        <summaryForeignKey>Resource_Report__c.Project_Overview__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_to_Date__c</fullName>
        <description>amount expended to date based on actual hours logged</description>
        <inlineHelpText>amount expended to date based on actual hours logged</inlineHelpText>
        <label>Total $ to Date</label>
        <summarizedField>Resource_Report__c.Actual_dollars_to_Date__c</summarizedField>
        <summaryForeignKey>Resource_Report__c.Project_Overview__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trend__c</fullName>
        <description>Rate how this project is doing overall as compared to last week</description>
        <inlineHelpText>Rate how this project is doing overall as compared to last week</inlineHelpText>
        <label>Trend</label>
        <picklist>
            <picklistValues>
                <fullName>Stable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Down</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project Overview</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects Overview</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>